<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/home_action_categories" />
    <item
        android:id="@+id/action_tours"
        android:icon="@drawable/ic_tours"
        android:title="@string/home_action_tours" />
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_option2"
        android:title="@string/home_action_map" />
    <item
        android:id="@+id/action_recognition"
        android:icon="@drawable/ic_camera"
        android:title="@string/home_action_recognition" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/home_action_profile" />
</menu>
