<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium">

    <TextView
        android:id="@+id/routeCreateTitle"
        style="@style/TextAppearance.Vinculacion.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/route_create_title" />

    <TextView
        android:id="@+id/routeCreateSubtitle"
        style="@style/TextAppearance.Vinculacion.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xsmall"
        android:text="@string/route_create_subtitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutRouteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:hint="@string/tour_route_name_hint"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputRouteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/routeCreateStatus"
        style="@style/TextAppearance.Vinculacion.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/route_create_status_pending" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/routeCreateCancel"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_create_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/routeCreateSave"
            style="@style/Widget.Vinculacion.Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:text="@string/route_create_save" />
    </LinearLayout>

</LinearLayout>
