<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium">

    <TextView
        android:id="@+id/routeEditorTitle"
        style="@style/TextAppearance.Vinculacion.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tour_route_editor_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutRouteName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:hint="@string/tour_route_name_hint"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/routeEditorTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputRouteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/routeEditorHint"
        style="@style/TextAppearance.Vinculacion.Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xsmall"
        android:text="@string/tour_route_editor_hint"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutRouteName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/routeEditorMapContainer"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_small"
        app:layout_constraintTop_toBottomOf="@id/routeEditorHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/routeEditorActions" />

    <LinearLayout
        android:id="@+id/routeEditorActions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/routeEditorUndo"
            style="@style/Widget.Vinculacion.Button.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tour_route_editor_undo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/routeEditorClear"
            style="@style/Widget.Vinculacion.Button.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:text="@string/tour_route_editor_clear" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/routeEditorSave"
            style="@style/Widget.Vinculacion.Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:text="@string/tour_route_editor_save" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
